# rust

src/bootstrap/: builder.rs  test.rs
src/libproc_macro/: Cargo.toml  bridge.rs  diagnostic.rs  lib.rs  quote.rs  rustc.rs
src/librustc/session/: config.rs
src/librustc/util/: common.rs
src/librustc_errors/: diagnostic.rs
src/librustc_metadata/: Cargo.toml  creader.rs  cstore_impl.rs
src/librustc_trans/: attributes.rs  base.rs  llvm_util.rs
src/librustc_trans/back/: link.rs
src/libsyntax_ext/: Cargo.toml  lib.rs  proc_macro_impl.rs  proc_macro_registrar.rs
src/libsyntax_ext/deriving/: custom.rs
src/test/compile-fail/proc-macro/: lints_in_proc_macros.rs
src/test/incremental-fulldeps/: incremental_proc_macro.rs
src/test/run-pass/: macro-quote-cond.rs  macro-quote-test.rs  proc_macro.rs
src/test/run-pass-fulldeps/: compiler-calls.rs
src/test/run-pass-fulldeps/proc-macro/: derive-attr-cfg.rs  empty-crate.rs  issue-42708.rs
src/test/run-pass/proc-macro/: attr-cfg.rs  derive-b.rs  smoke.rs  struct-field-macro.rs
src/test/ui-fulldeps/custom-derive/: issue-36935.rs
src/test/ui-fulldeps/proc-macro/: signature.rs
src/test/ui/proc-macro/: parent-source-spans.rs  signature.stderr  three-equals.rs
