[package]
authors = ["The Rust Project Developers"]
name = "syntax_ext"
version = "0.0.0"

[lib]
name = "syntax_ext"
path = "lib.rs"
crate-type = ["dylib"]

[dependencies]
fmt_macros = { path = "../libfmt_macros" }
rustc_errors = { path = "../librustc_errors" }
syntax = { path = "../libsyntax" }
syntax_pos = { path = "../libsyntax_pos" }
rustc_data_structures = { path = "../librustc_data_structures" }
